--- a/src/App.css
+++ b/src/App.css
@@ -35,7 +35,7 @@ select {
 
 .shows {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(420px, 1fr));
   gap: 10px;
   list-style-type: none;
   margin: 0;
@@ -52,4 +52,61 @@ h1 {
 body {
   padding: 20px;
   display: block !important;
+}
+
+.info {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid rgb(52, 52, 52);
+  border-radius: 10px;
+  padding: 1rem;
+  cursor: pointer;
+  margin: 0 auto;
+  width: 450px;
+}
+
+.info h3 {
+  height: 11%;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  color: darkblue;
+}
+
+.info p {
+  margin: 0.25rem;
+  overflow: hidden;
+  white-space: nowrap;
+  line-height: 2rem;
+}
+
+.info img {
+  width: inherit;
+  height: 300px;
+  margin: 8px 0 0 0;
+}
+
+.info a {
+  background-color: #0077cc;
+  color: #fff;
+  text-align: center;
+  font-size: 16px;
+  font-weight: bold;
+  text-decoration: none;
+  padding: 10px;
+  border-radius: 4px;
+  margin-top: 10px;
+}
+
+.info a:hover {
+  background-color: #0066b2;
+}
+
+.charts {
+  display: flex;
+  margin: 0 0 4rem 0;
+}
+
+.chart-titles {
+  display: flex;
+  justify-content: space-around;
 }
